@@ -1,5 +1,7 @@
-ALERT: typeof(objCPlugin)=object
-ALERT: objCPlugin()=TypeError
+ALERT: typeof(cPlugin)=function
+ALERT: cPlugin()=1
+ALERT: typeof(cPlugin)=object
+ALERT: cPlugin()=TypeError
 This page tests invoking as functions JavaScript objects that are provided by plugins.
 
 
